# ctypes_examples

./: .gitignore  CMakeLists.txt  README.md
1-simple-func/: CMakeLists.txt  pyscript.py  simplefunc.cpp  simplefunc.py
2-pyobject-func/: CMakeLists.txt  pyobjectfunc.cpp  pyobjectfunc.py  pyscript.py
